Fix dark unreadable text while searching gifs (full)

--- a/deslopcord-Full.css
+++ b/deslopcord-Full.css
@@ -281,26 +281,6 @@ span[class*="timestampInline_"]>[aria-label^="Today at"]::before {
     margin-inline-start: 0px;
 }
 
-.wrapper__72c38 {
-    position: relative;
-    --custom-input-background-color: var(--input-background-default);
-    --custom-input-border-color: var(--input-border-default);
-    --custom-input-text-color: var(--input-foreground-default);
-    --custom-input-hover-border-color: var(--input-border-default-hover);
-    --custom-input-focus-border-color: var(--input-border-active);
-    align-items: center;
-    background-color: var(--custom-input-background-color);
-    border: 1px solid var(--custom-input-border-color);
-    border-radius: var(--radius-sm);
-    box-sizing: border-box;
-    color: var(--custom-input-text-color);
-    display: flex
-    ;
-    flex-wrap: wrap;
-    gap: var(--space-4);
-    transition: border-color .1s ease;
-}
-
 .wrapper_ef3116 {
     margin-bottom: 0;
 }
